# kore

./: .gitignore  Makefile.am  README  autorun  autotools.sh  bootstrap  circle.m4  configure.ac
doc/: lockpick-ideas.doc  mobprog.doc
lib/etc/: badsites
lib/misc/: messages  socials  xnames
lib/text/: area_help  areahelp  areahelp_table  background  clanhelp  clanhelp_table  color.motd  credits  dq  handbook  help  help_old  help_table  immlist  immlist.funny  imotd  info  motd  motd_dq  motd_pwipe  news  policies  wizhelp  wizhelp_table  wizlist
lib/world/dshops/: 12016.inv  12016.shp  16008.inv  16008.shp  16028.inv  16028.shp  16029.inv  16029.shp  16030.inv  16030.shp  610.inv  610.shp  6504.inv  6504.shp  6530.inv  6531.inv  6531.shp  8201.inv  8201.shp  8208.inv  8208.shp  8265.inv  8265.shp
lib/world/mob/: 000.mob  001.mob  003.mob  004.mob  005.mob  006.mob  007.mob  008.mob  009.mob  010.mob  011.mob  012.mob  013.mob  014.mob  015.mob  016.mob  018.mob  019.mob  020.mob  021.mob  022.mob  023.mob  024.mob  025.mob  027.mob  030.mob  031.mob  032.mob  034.mob  035.mob  036.mob  037.mob  038.mob  (+125 more)
m4/: circlemud.m4
src/: Makefile  Makefile.am  act.build.c  act.comm.c  act.informative.c  act.movement.c  act.obj.c  act.offensive.c  act.other.c  act.social.c  act.wizard.c  ascii_pfiles.c  auction.c  auction.h  ban.c  boards.c  boards.h  buffer.h  circle.h  clan.c  clan.h  class.c  comm.c  comm.h  config.c  constants.c  creation.c  data.c  data.h  db.c  db.h  dshop.c  fight.c  foldarea.c  graph.c  handler.c  handler.h  house.c  interpreter.c  interpreter.h  (+40 more)
(+957 files in other folders)
