bin_PROGRAMS=$(top_builddir)/bin/circle
__top_builddir__bin_circle_LDADD=@CRYPTLIB@
__top_builddir__bin_circle_SOURCES=\
	act.comm.c \
	act.informative.c \
	act.movement.c \
	act.obj.c \
	act.offensive.c \
	act.other.c \
	act.social.c \
	act.wizard.c \
	ascii_pfiles.c \
	auction.c \
	ban.c \
	boards.c \
	clan.c \
	class.c \
	comm.c \
	config.c \
	constants.c \
	creation.c \
	db.c \
	dshop.c \
	fight.c \
	foldarea.c \
	graph.c \
	handler.c \
	house.c \
	interpreter.c \
	limits.c \
	magic.c \
	mail.c \
	medit.c \
	mobact.c \
	mobcmd.c \
	mobprog.c \
	modify.c \
	objprog.c \
	objsave.c \
	oedit.c \
	olc.c \
	pawnshop.c \
	pets.c \
	quest.c \
	race.c \
	random.c \
	redit.c \
	screen.c \
	sedit.c \
	ship.c \
	shop.c \
	shop2.c \
	spec_assign.c \
	spec_procs.c \
	spell_parser.c \
	spells.c \
	textsave.c \
	timed.c \
	utils.c \
	weather.c \
	zedit.c
